# colpali-vision-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENHANCEMENTS.md  PRODUCTION_HARDENING.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
eval/: dataset.jsonl  run_eval.py  scoring.py
scripts/: make_sample_pdf.py
src/: answerer.py  confidence.py  config.py  embedder.py  gemini_client.py  graph.py  heatmap.py  highlight.py  ingest.py  logging_setup.py  main.py  pdf_render.py  request_context.py  reranker.py  server.py  vector_store.py
tests/: test_answerer.py  test_confidence.py  test_eval_scoring.py  test_gemini_client.py  test_graph.py  test_heatmap.py  test_highlight.py  test_ingest.py  test_logging_setup.py  test_main.py  test_pdf_render.py  test_pipeline_integration.py  test_request_context.py  test_reranker.py  test_run_eval.py  test_server.py  test_vector_store.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  lib.test.ts  lib.ts  theme.css  types.ts
ui/src/components/: AnswerBubble.tsx  AskBox.tsx  CandidateRail.tsx  Conversation.tsx  CorpusRail.tsx  IngestModal.tsx  TraceDisclosure.tsx  Viewer.tsx
